--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,9 @@
 package: github.com/dtan4/k8sec
 import:
 - package: github.com/mitchellh/cli
+- package: k8s.io/kubernetes
+  subpackages:
+  - pkg/client/unversioned
+  - pkg/api
+  - pkg/client/unversioned/clientcmd
+  - pkg/fields
