Update binaries from Travis CI directly

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ install:
   - make deps
 script:
   - make test
+before_deploy:
+  - make cross-build
+  - make dist
 deploy:
-  - provider: script
-    script: make release-all
-    on:
-      tags: true
-      go: '1.7'
+  provider: releases
+  skip_cleanup: true
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file: 'dist/*.{tar.gz,zip}'
+  on:
+    tags: true
+    go: '1.7'
