--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,5 @@ import:
   - pkg/client/unversioned
   - pkg/api
   - pkg/client/unversioned/clientcmd
+- package: k8s.io/client-go
+  version: ~2.0.0-alpha.0
