Run Docker E2E test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - make deps
 script:
   - make test
+  - make docker-test
 before_deploy:
   - GOOS=linux GOARCH=amd64 make
   - make cross-build
