Disable cgo at cross compile

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - make test
   - make docker-test
 before_deploy:
-  - GOOS=linux GOARCH=amd64 make
+  - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 make
   - make cross-build
   - make dist
 deploy:
