--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/dtan4/k8sec
 import:
 - package: k8s.io/client-go
-  version: ~2.0.0-alpha.0
+  version: ~2.0.0
   subpackages:
   - pkg/api/v1
   - kubernetes
