--- a/glide.yaml
+++ b/glide.yaml
@@ -5,3 +5,5 @@ import:
 - package: github.com/spf13/cobra
 - package: github.com/pkg/errors
   version: ~0.8.0
+- package: github.com/json-iterator/go
+  version: ^1.1.4
