--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,32 @@
-*
-!bin/k8sec
+*.test
+
+bin
+vendor
+dist
+
+# Created by https://www.gitignore.io/api/go
+
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+### Go Patch ###
+vendor/
+Godeps/
+
+
+# End of https://www.gitignore.io/api/go
+
+.git
+.gitignore
+README.md
