--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.14
+      - name: Log in to quay.io
+        uses: Azure/docker-login@v1
+        with:
+          login-server: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
