--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.15
+          go-version: ^1.16.0
       - name: Log in to quay.io
         uses: Azure/docker-login@v1
         with:
