Ignore Go version update

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,9 @@
   "ignorePaths": [
     "Dockerfile"
   ],
+  "ignoreDeps": [
+    "go"
+  ],
   "packageRules": [
     {
       "matchUpdateTypes": [
