renovate: Exclude k8s deps from group

--- a/renovate.json
+++ b/renovate.json
@@ -27,7 +27,10 @@
       "automerge": true,
       "automergeType": "branch",
       "matchPackageNames": [
-        "!go"
+        "!go",
+        "!k8s.io/api",
+        "!k8s.io/apimachinery",
+        "!k8s.io/client-go"
       ]
     },
     {
