--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
           go-version-file: "go.mod"
 
       - name: Run tests
-        run: make ci-test
+        run: make test
 
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@6c175e9c4083a92bbca2f9724c8a5e33bc2d97a5 # 0.30.0
