--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,6 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
-before:
-  hooks:
-    - make clean
-    - go mod tidy
+version: 2
 builds:
 - ldflags:
   - "-s -w -X github.com/dtan4/k8sec/version.version={{.Version}} -X github.com/dtan4/k8sec/version.commit={{.Commit}} -X github.com/dtan4/k8sec/version.date={{.Date}} -X github.com/dtan4/k8sec/version.builtBy=goreleaser"
@@ -14,42 +11,18 @@ builds:
   - linux
   - windows
   goarch:
-  - 386
   - amd64
   - arm
   - arm64
 archives:
 - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
   format_overrides:
   - goos: windows
-    format: zip
+    formats:
+    - zip
 release:
   prerelease: auto
-brews:
-- tap:
-    owner: dtan4
-    name: homebrew-tools
-  folder: Formula
-  homepage: https://github.com/dtan4/k8sec
-  description: CLI tool to manage Kubernetes Secrets easily
-  skip_upload: auto # skip if the version is rc (e.g. v1.0.0-rc1)
-  test: |
-    system "#{bin}/k8sec", "version"
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
-changelog:
-  sort: asc
-  filters:
-    exclude:
-    - '^docs:'
-    - '^test:'
-    - Merge pull request
-    - Merge branch
+  version_template: "{{ .Tag }}-next"
